2010-05-11  MORITA Hajime  <morrita@google.com>

        Reviewed by Dirk Schulze.

        CSS SVG font doesn't recognize URL without element reference
        https://bugs.webkit.org/show_bug.cgi?id=37144

        CachedFont::getSVGFontById() did assume that element reference (ID) is given.
        So fixed to handle an empty or missing element reference. In which case, 
        the first font element is returned if available.
        
        Test: svg/custom/svg-fonts-with-no-element-reference.html

        * loader/CachedFont.cpp:
        (WebCore::CachedFont::getSVGFontById):

2010-05-11  Jer Noble  <jer.noble@apple.com>

        No Review.
        
        Fix the Windows Debug Build: the correct VCProj variable to use when linking against
        JavaScriptCore is $(WebKitDLLConfigSuffix), not $(WebKitConfigSuffix), which expands
        to an empty string rather than "_debug".
        
        * WebCore.vcproj/QTMovieWin.vcproj:

2010-05-11  Jer Noble  <jer.noble@apple.com>

        Darin Adler.

        19 media tests are crashing on Windows Release
        https://bugs.webkit.org/show_bug.cgi?id=38950
        rdar://problem/7971658

        Link against JavaScriptCore.lib instead of WTF.lib, so the free and malloc used by 
        QTMovieWin is always the free and malloc in JavaScriptCore.dll.
        
        * WebCore.vcproj/QTMovieWin.vcproj:

2010-05-11  Darin Adler  <darin@apple.com>

        Reviewed by Beth Dakin.

        Another refactoring patch in preparation for a fix to
        https://bugs.webkit.org/show_bug.cgi?id=38871
        REGRESSION: Crash clicking background NPR tab after few minutes of sitting idle

        * dom/Document.cpp:
        (WebCore::Document::addMediaCanStartListener): Added.
        (WebCore::Document::removeMediaCanStartListener): Added.

        * dom/Document.h: Added add/removeMediaCanStartListener.

        * html/HTMLMediaElement.cpp: