@@ -32,6 +32,7 @@
 #include "RuntimeEnabledFeatures.h"
 
 #include "Database.h"
+#include "DatabaseSync.h"
 #include "MediaPlayer.h"
 #include "SharedWorkerRepository.h"
 #include "WebSocket.h"
@@ -95,6 +96,11 @@ bool RuntimeEnabledFeatures::webSocketEnabled()
 bool RuntimeEnabledFeatures::openDatabaseEnabled()
 {
     return Database::isAvailable();
+}
+
+bool RuntimeEnabledFeatures::openDatabaseSyncEnabled()
+{
+    return DatabaseSync::isAvailable();
 }
 #endif
 
