@@ -75,6 +75,7 @@ public:
 
 #if ENABLE(DATABASE)
     static bool openDatabaseEnabled();
+    static bool openDatabaseSyncEnabled();
 #endif
 
 #if ENABLE(3D_CANVAS)
